# mytv

./: .gitattributes  CHANGELOG.md  README.md  settings.gradle.kts
.github/workflows/: android.yml
allinone/: build.gradle.kts
allinone/src/main/assets/: resolv.conf
core/data/: build.gradle.kts  proguard-rules.pro
core/data/src/main/res/raw/: channel_name_alias.json  epg_channel_mapping.json
core/designsystem/: build.gradle.kts
core/util/: build.gradle.kts
docs/superpowers/plans/: 2026-05-03-advance-page-rebuild.md  2026-05-08-volume-key-fade-effect.md
docs/superpowers/specs/: 2026-05-03-advance-page-rebuild-design.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
ijkplayer-java/: build.gradle  proguard-rules.pro
ijkplayer-java/src/main/java/com/wangsu/httpclient/: WsRTCHttp.java
tv/: build.gradle.kts  proguard-rules.pro
tv/src/main/: AndroidManifest.xml
tv/src/main/assets/remote-configs/: index.html
tv/src/main/assets/remote-configs-source/: index.html  package.json  vite.config.ts
tv/src/main/assets/remote-configs-source/src/: App.vue  main.ts
tv/src/main/assets/remote-configs-source/src/components/: ConfigSection.vue
tv/src/main/assets/remote-configs-source/src/composables/: index.ts  useApi.ts  useAuth.ts  useConfig.ts
tv/src/main/assets/remote-configs/assets/: index-Bq1XwZez.js  style-kB29EKMR.css
tv/src/main/cpp/: CMakeLists.txt  whisper-jni.c
tv/src/main/res/raw/: web_push.html
tv/src/main/res/values/: themes.xml
tv/src/main/res/xml/: network_security_config.xml
(+271 files in other folders)
